modules/gdscript/tests/scripts/parser/errors/subscript_without_index.gd
func test():
	var array = [1, 2, 3]
	array[] = 4
